--- a/spotted-styles.css
+++ b/spotted-styles.css
@@ -434,66 +434,95 @@ body::after {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
     .project-title {
-        font-size: 5rem;
+        margin-top: -5rem;
+        font-size: 4rem;
     }
     
     .project-info-section h2,
-    .project-mobile h2 {
-        font-size: 3rem;
+    .project-website h2 {
+        font-size: 2.5rem;
     }
-    
+
     .project-goal p {
         font-size: 1rem;
-        margin-top: -2rem;
-        max-width: 90%;
+        margin-top: 2rem;
+    }
+
+    .divider {
+        width: 85%;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.2);
+        margin-left: 2.1rem;
     }
     
+    .year-tag {
+        top: 1rem;
+        font-size: 0.7rem;
+        padding: 0.3rem 0.6rem;
+    }
+
+    .project-goal p {
+        margin-left: 40%;
+    }
+
+    .contact::before {
+        font-size: 10vh; /* Adjusted for smaller screens */
+        top: 25%;
+    }
+
+    .project-mobile h2 {
+        font-size: 3rem;
+        margin-bottom: -1rem;
+        color: #ECD5B3;
+        opacity: .1;
+    }
+    
+    .contact-button {
+        width: 100%;
+        text-align: center;
+    }
+
+    .contact-image {
+        outline: 1px solid transparent; /* Initial border */
+        outline-offset: -1px;
+        border-radius: 15px;
+    }
+
+    .contact {
+        min-height: 30vh;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+
+    .contact-blur {
+        position: absolute;
+        width: 100%;
+        height: 122px;
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
+        z-index: 0;
+        border-radius: 15px;
+    }
+
     .mobile-screens {
-        flex-direction: column;
+        width: 100%;
+        gap: 1rem;
         align-items: center;
     }
     
-    .mobile-screen {
-        max-width: 70%;
-        margin-bottom: 2rem;
-    }
-    
     .hero-image {
-        width: 95%;
+        border-radius: 30px; /* Further reduced for very small screens */
+        margin-top: -4rem;
+        margin-right: 2rem;
+        margin-left: 25%;
+        width: 1000px;
+        height: auto;
     }
     
-    .message-text {
-        font-size: 1.5rem;
-    }
-    
-    .contact-container {
-        width: 90%;
-    }
-}
-
-@media (max-width: 576px) {
-    .project-title {
-        font-size: 3.5rem;
-    }
-    
-    .project-info-section h2,
-    .project-mobile h2 {
-        font-size: 2.5rem;
-    }
-    
-    .nav-links a {
-        font-size: 0.7rem;
-    }
-    
-    .message-circle {
-        width: 60px;
-        height: 60px;
-        font-size: 0.6rem;
-    }
-    
-    .message-text {
-        font-size: 1.2rem;
+    .card {
+        border-radius: 10px; /* Further reduced for very small screens */
     }
 }
